--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 plugins {
     // Plugin that applies Google-Java-format to the Java files in the project.
     // https://github.com/sherter/google-java-format-gradle-plugin
-    id 'com.github.sherter.google-java-format' version '0.6'
+    // id 'com.github.sherter.google-java-format' version '0.6'
 }
 
 apply plugin: 'java'
@@ -135,6 +135,7 @@ tasks.clean {
 
 // Commented out because plugins section is commented out
 /* Configuration for formatting */
+/*
 googleJavaFormat {
     // toolVersion '1.3'
     options style: 'AOSP'
@@ -155,3 +156,4 @@ tasks.verifyGoogleJavaFormat {
     exclude 'annotated'
     exclude 'worked-benchmarks'
 }
+*/
