--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     compile 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.4'
     compile 'org.ow2.sat4j:org.ow2.sat4j.maxsat:2.3.4'
 
+    compile fileTree(dir: "${cfiPath}/dist", include: "inference-framework-test-lib.jar")
+
     // CF test lib dependency
     testCompile fileTree(dir: "${cfPath}/framework-test/build/libs", include: "framework-test-*.jar")
     testCompile 'junit:junit:4.12'
@@ -60,8 +62,7 @@ sourceSets {
 
     test {
         java {
-            // TODO: we shouldn't need source level dependency on CFITest
-            srcDirs = ["tests", "${cfiPath}/tests/checkers/inference/test"]
+            srcDirs = ["tests"]
         }
     }
 }
