--- a/working-benchmarks.yml
+++ b/working-benchmarks.yml
@@ -4,20 +4,20 @@ projects:
     build: mvn install
     clean: mvn clean
 
-  exp4j:
-    giturl: https://github.com/opprop-benchmarks/exp4j.git
-    build: mvn install
-    clean: mvn clean
+#  exp4j:
+#    giturl: https://github.com/opprop-benchmarks/exp4j.git
+#    build: mvn install
+#    clean: mvn clean
 
   JLargeArrays:
     giturl: https://github.com/opprop-benchmarks/JLargeArrays.git
     build: mvn install
     clean: mvn clean
 
-  jReactPhysics3D:
-    giturl: https://github.com/opprop-benchmarks/jReactPhysics3D.git
-    build: mvn install
-    clean: mvn clean
+#  jReactPhysics3D:
+#    giturl: https://github.com/opprop-benchmarks/jReactPhysics3D.git
+#    build: mvn install
+#    clean: mvn clean
 
   imgscalr:
     giturl: https://github.com/thebuzzmedia/imgscalr.git
@@ -61,8 +61,8 @@ projects:
     build: mvn compile
     clean: mvn clean
 
-  jump:
-    giturl: https://github.com/aas-integration/jump.git
-    git-ref: e05cac7b1b584a493978d6861cbc7fa762816f34
-    build: ant jar
-    clean: ant clean
+#  jump:
+#    giturl: https://github.com/aas-integration/jump.git
+#    git-ref: e05cac7b1b584a493978d6861cbc7fa762816f34
+#    build: ant jar
+#    clean: ant clean
