--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ plugins {
 apply plugin: 'java'
 
 ext {
-    assert JavaVersion.current() == JavaVersion.VERSION_1_8: "Set JAVA_HOME to JDK 8. Current version is ${JavaVersion.current()}"
     jsr308 = System.getenv('JSR308') ?: file(new File("..")).absolutePath
     cfPath = "${jsr308}/checker-framework"
     cfiPath = "${jsr308}/checker-framework-inference"
@@ -90,13 +89,15 @@ afterEvaluate {
     tasks.withType(Test) {
         group 'Verification'
 
-        systemProperties 'path.afu.scripts': "${afu}/scripts",
-                'path.inference.script': "${cfiPath}/scripts/inference",
-                JDK_JAR: "${cfPath}/checker/dist/jdk8.jar"
+        systemProperties = ['path.afu.scripts': "${afu}/scripts",
+                'path.inference.script': "${cfiPath}/scripts/inference"]
+
+        if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+            systemProperties += [JDK_JAR: "${cfPath}/checker/dist/jdk8.jar"]
+            jvmArgs "-Xbootclasspath/p:${cfiPath}/dist/javac.jar"
+        }
 
         environment "external_checker_classpath", "${securityPath}/build/classes/java/main:${securityPath}/build/libs/security-demo.jar"
-
-        jvmArgs "-Xbootclasspath/p:${cfiPath}/dist/javac.jar"
 
         testLogging {
             // Always run the tests
