--- a/working-benchmarks.yml
+++ b/working-benchmarks.yml
@@ -9,10 +9,11 @@ projects:
 #    build: mvn install
 #    clean: mvn clean
 
-  JLargeArrays:
-    giturl: https://github.com/opprop-benchmarks/JLargeArrays.git
-    build: mvn install
-    clean: mvn clean
+#  Cannot compile with JDK11
+#  JLargeArrays:
+#    giturl: https://github.com/opprop-benchmarks/JLargeArrays.git
+#    build: mvn install
+#    clean: mvn clean
 
 #  jReactPhysics3D:
 #    giturl: https://github.com/opprop-benchmarks/jReactPhysics3D.git
