Set defaults for special locations (#7)

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ sourceSets {
             srcDirs = ["src"]
             include "**/*.astub"
         }
+
+        output.resourcesDir = "build/classes/java/main"
     }
 
     test {
