--- a/working-benchmarks.yml
+++ b/working-benchmarks.yml
@@ -1,7 +1,7 @@
 projects:
   jblas:
     giturl: https://github.com/opprop-benchmarks/jblas.git
-    build: mvn install
+    build: mvn compile
     clean: mvn clean
 
 #  exp4j:
@@ -21,8 +21,8 @@ projects:
 #    clean: mvn clean
 
   imgscalr:
-    giturl: https://github.com/thebuzzmedia/imgscalr.git
-    git-ref: e1e1da77c12570f5c21d2f6ef42f0ce80c3fa092
+    giturl: https://github.com/opprop-benchmarks/imgscalr.git
+    git-ref: 492cc8b3e53bcfe3e88fdac4c3bfcf44a0922c3d
     build: mvn compile
     clean: mvn clean
 
