--- a/build.gradle
+++ b/build.gradle
@@ -29,22 +29,21 @@ println 'CF:     ' + cfPath
 println 'CFI:    ' + cfiPath
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    compile fileTree(dir: "${cfPath}/checker/dist", include: "checker.jar")
-    compile fileTree(dir: "${cfiPath}/dist", include: "checker-framework-inference.jar")
+    implementation fileTree(dir: "${cfPath}/checker/dist", include: "checker.jar")
+    implementation fileTree(dir: "${cfiPath}/dist", include: "checker-framework-inference.jar")
     // sat4j solver dependency
-    compile 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.4'
-    compile 'org.ow2.sat4j:org.ow2.sat4j.maxsat:2.3.4'
+    implementation 'org.ow2.sat4j:org.ow2.sat4j.core:2.3.4'
+    implementation 'org.ow2.sat4j:org.ow2.sat4j.maxsat:2.3.4'
 
-    compile fileTree(dir: "${cfiPath}/dist", include: "inference-framework-test-lib.jar")
+    implementation fileTree(dir: "${cfiPath}/dist", include: "inference-framework-test-lib.jar")
 
     // CF test lib dependency
-    testCompile fileTree(dir: "${cfPath}/framework-test/build/libs", include: "framework-test-*.jar")
-    testCompile 'junit:junit:4.12'
+    testImplementation fileTree(dir: "${cfPath}/framework-test/build/libs", include: "framework-test-*.jar")
+    testImplementation 'junit:junit:4.12'
 }
 
 sourceSets {
